2004-10-13  Cramblitt <garycramblitt@comcast.net>
        * libktts is now a versioned shared library.  You may need to remove the
          unversioned library, ie.
             rm $KDEDIR/lib/libktts.*
             
2004-10-13  Cramblitt <garycramblitt@comcast.net>
        * Revert previous change.  Sorry.

2004-10-13  Cramblitt <garycramblitt@comcast.net>
        * Remove versioning from libkttsd.
          NOTE: After rebuilding and installing, you will want to delete
                the following file:
                  $KDEDIR/lib/libkttsd.so.1.0.0

2004-10-12  Cramblitt <garycramblitt@comcast.net>
        * Added Handbook.
        * Help button and system tray content menu display Handbook.
        
2004-09-07  Cramblitt <garycramblitt@comcast.net>
        * Added 6 new HTS voices for Festival and FestivalInt plugins.
          Courtesy of "N.Cat" Triskelios.
          Download the voices from http://hts.ics.nitech.ac.jp/
          
2004-09-04  Cramblitt <garycramblitt@comcast.net>
        * Rename Hadifax to Hadifix.
          NOTE: After rebuilding and installing, you will want to delete the
                following files:
                  $KDEDIR/lib/kde3/libhadifaxplugin.la
                  $KDEDIR/lib/kde3/libhadifaxplugin.so
                  $KDEDIR/share/services/hadifax.desktop

2004-09-02  Paul Giannaros
        * FreeTTS plugin.
        
2004-08-28  Cramblitt <garycramblitt@comcast.net>
        * GStreamer player added.  Doesn't work right now because gstreamer 0.6
          has issues with wav files.  Try again when KDE bindings (gst) have been
          updated to gstreamer 0.8.
        * If jobNum parameter in dcop calls is 0, default to last job queued by the
          application, or if no such job, the current job (instead of last job).
        * After call to stopText, if there more speakable jobs in the queue, they begin
          speaking.
        * Emit textPaused and textStopped signals as documented.